# mssql-rs

./: .gitignore  BINARY_BULK_COPY_IMPLEMENTATION.md  BUG_TDSCLIENT_MOVE_TO_NEXT.md  BULK_COPY_TYPE_SYSTEM_ANALYSIS.md  CHANGELOG.md  CHANGELOG_ServerCertificate.md  CONTRIBUTING.md  Cargo.toml  DRIVER_VERSION_IMPLEMENTATION.md  DRIVER_VERSION_README.md  E2E_TEST_IMPLEMENTATION.md  FUZZING_API_INPUTS.md  FUZZING_API_INPUTS_QUICKSTART.md  FUZZING_CONNECTION_PROVIDER.md  FUZZING_IMPLEMENTATION_SUMMARY.md  FUZZING_QUICKSTART.md  GIT_COMMIT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  JSON_BULKCOPY_COMPARISON.md  JS_API_BUG_ANALYSIS.md  LOCALDB_CONNECTION_FLOW.md  LONGHAUL_TEST_GUIDE.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  Makefile  PRIVATE_LINK_SETUP.md  PRIVATE_LINK_TESTING.md  PR_REVIEW_GUIDE.md  PYTHON_WHEEL_BUILD_PIPELINE.md  README.md  RUST_API_PROPOSAL.md  SUPPORT.md  ServerCertificate_Feature_Spec.md  ServerCertificate_Implementation_Guide.md  ServerCertificate_Implementation_Summary.md  TEST_SUMMARY.md  WINDOWS_TESTING_GUIDE.md  azurepipelines-coverage.yml  es-metadata.yml  (+4 more)
cpp-driver-cxx/: Cargo.toml  build.rs
cpp-driver-cxx/src/: api_wrapper.rs  lib.rs  tds_connection.cc  tds_connection.h
mssql-js/: .eslintrc.js  .gitignore  .prettierignore  Cargo.toml  TRACING.md  build.rs  eslint.config.js  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
mssql-js/.cargo/: config.toml
mssql-js/__test__/: bigint_conversion.spec.mjs  bit_conversion.spec.mjs  datetime_conversion.spec.mjs  db.mjs  index.spec.mjs  int_conversion.spec.mjs  smallint_conversion.spec.mjs  test_multiple_result_sets.spec.mjs  tinyint_conversion.spec.mjs  transformers.spec.mjs
mssql-js/js/: codepages.js  codepages.ts  index.ts  request.ts
mssql-js/lib/: .gitignore  codepages.ts  connection.ts  decode.ts  index.ts  request.ts  transactions.ts
mssql-js/perf/: README.md  query.mjs
mssql-js/src/: binary_row_writer.rs  connection.rs  context.rs  datatypes.rs  ffidatatypes.rs  lib.rs  tracing_init.rs
mssql-mock-tds/: Cargo.toml  FLEXIBLE_QUERY_EXECUTION.md  README.md
mssql-mock-tds-py/: Cargo.toml  pyproject.toml
mssql-mock-tds-py/src/: lib.rs
mssql-mock-tds/src/: lib.rs  main.rs  protocol.rs  query_response.rs  server.rs  tds_tls_wrapper.rs  tls_helper.rs
mssql-py-core/: .gitignore  Cargo.toml  pyproject.toml  pytest-smoke-results.xml  pytest.ini
mssql-py-core/src/: bulkcopy.rs  connection.rs  cursor.rs  lib.rs  python_logger_adapter.rs  row_writer.rs  tracing_init.rs  types.rs  utils.rs
mssql-py-core/tests/: __init__.py  conftest.py  test_auth_resolution.py  test_bulkcopy_auto_fewer_columns.py  test_bulkcopy_bigint.py  test_bulkcopy_binary.py  test_bulkcopy_bit.py  test_bulkcopy_char_collations.py  test_bulkcopy_column_mismatch.py  test_bulkcopy_date.py  test_bulkcopy_datetime.py  test_bulkcopy_datetime2.py  test_bulkcopy_datetimeoffset.py  test_bulkcopy_decimal.py  test_bulkcopy_errors_timeouts.py  test_bulkcopy_float.py  test_bulkcopy_image.py  test_bulkcopy_int.py  test_bulkcopy_json.py  test_bulkcopy_json_azure.py  test_bulkcopy_json_single.py  test_bulkcopy_longhaul.py  test_bulkcopy_money.py  test_bulkcopy_multipart_table_names.py  test_bulkcopy_nchar.py  test_bulkcopy_ntext.py  test_bulkcopy_numeric.py  test_bulkcopy_nvarchar.py  test_bulkcopy_options.py  test_bulkcopy_smalldatetime.py  test_bulkcopy_smallint.py  test_bulkcopy_text.py  test_bulkcopy_time.py  test_bulkcopy_timeout_zero.py  test_bulkcopy_tinyint.py  test_bulkcopy_transactions.py  test_bulkcopy_uuid.py  test_bulkcopy_varchar_collations.py  test_bulkcopy_variant.py  test_bulkcopy_varying_columns.py  (+8 more)
mssql-rs/: Cargo.toml
mssql-rs/src/: client.rs  column_stream.rs  datetime.rs  error.rs  from_value.rs  lib.rs  metadata.rs  result_set.rs  row.rs
mssql-rs/tests/: connection.rs  metadata.rs  parameterized.rs  prepared.rs  streaming.rs  transactions.rs  type_system.rs
mssql-tds/: .env  Cargo.toml  README.md  Sequence-BulkCopy.md  Sequence-SpexecSql.md
mssql-tds-cli/: Cargo.toml  README.md
mssql-tds-cli/src/: main.rs
mssql-tds/benches/: perf.rs
mssql-tds/examples/: connection_action_chain.rs
mssql-tds/fuzz/: .gitignore  Cargo.toml  FUZZING-README.md  FUZZING_TDS_CLIENT.md  README-COVERAGE.md  README.md  SETUP-GUIDE.md  WINDOWS_NOTES.md  run-fuzz-coverage.sh  run-fuzz.sh
mssql-tds/src/: connection.rs  connection_provider.rs  core.rs  datatypes.rs  error.rs  fuzz_support.rs  handler.rs  io.rs  lib.rs  main.rs  message.rs  query.rs  read_write.rs  sql_identifier.rs  ssrp.rs  tds_value_serializer.rs  token.rs
mssql-tds/tests/: README_NO_PROTOCOL_TESTS.md  TRANSPORT_TESTS_README.md  connectivity.rs  named_pipe_connectivity.rs  property_test_done_token.rs  query_results.rs  test_bulk_copy.rs  test_bulk_copy_bigint.rs  test_bulk_copy_error_recovery.rs  test_bulk_copy_timeout.rs  test_bulk_copy_transactions.rs  test_bulk_copy_uuid.rs  test_bulk_copy_variant.rs  test_bulk_copy_varying_columns.rs  test_bulk_copy_vector.rs  test_bulk_copy_with_metadata.rs  test_bulk_copy_xml.rs  test_client_read_apis.rs  test_client_transactions.rs  test_encrypt_for_connections.rs  test_kerberos_gssapi.rs  test_mock_server.rs  test_mock_server_fedauth.rs  test_mock_server_tls.rs  test_multi_subnet_failover.rs  test_no_protocol_resolution.rs  test_redirection.rs  test_rpc_datatypes.rs  test_rpc_results.rs  test_tls_handshake.rs  test_transport_protocols.rs  test_vector_type.rs  test_windows_sspi.rs  timeout_and_cancel.rs  transaction.rs
prototype/tdsapp/: Cargo.toml  README.md
tds-x/: .env  Cargo.toml
tds-x/cpp-driver-cxx/: Cargo.toml  README.md
tds-x/src/: connection.rs  connection_provider.rs  core.rs  datatypes.rs  error.rs  lib.rs  main.rs  message.rs  query.rs  read_write.rs  token.rs
tds-x/tests/: connectivity.rs  query_results.rs  test_rpc_datatypes.rs  test_rpc_results.rs  timeout.rs  timeout_and_cancel.rs  transaction.rs
tdsx-nodejs/: Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
tdsx-nodejs/__test__/: index.spec.mjs
tdsx-python/: Cargo.toml  build.rs
(+619 files in other folders)
