[package]
name = "cpp-driver-cxx"
version = "0.1.0"
edition = "2021"

[dependencies]
tds-x = { path = "../tds-x" }
cxx = "1.0.158"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"


[build-dependencies]
tds-x = { path = "../tds-x" }
cxx = "1.0.158"
cxx-build = "1.0.158"

[lib]
crate-type = ["staticlib"]
