[package]
edition = "2024"
name = "mssql-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.7", default-features = false, features = ["napi4", "async", "tokio_rt", "chrono_date", "napi6", "compat-mode"] }
napi-derive = "2.16.13"
mssql-tds = { path = "../mssql-tds" }
tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4.41"
tracing-subscriber = "0.3.19"
tracing = { version = "0.1.41", features = ["log"] }

[build-dependencies]
napi-build = "2.2.2"
