[package]
edition = "2024"
name = "mssql-js"
version = "0.0.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.17", default-features = false, features = ["napi4", "async", "tokio_rt", "chrono_date", "napi6", "compat-mode"] }
napi-derive = "2.16.13"
mssql-tds = { path = "../mssql-tds" }
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing = { version = "0.1.43", features = ["log"] }

uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tracing-appender = "0.2.4"
once_cell = "1.21"

[build-dependencies]
napi-build = "2.3.1"
