[package]
name = "mssql-py-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mssql_py_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
mssql-tds = { path = "../mssql-tds" }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
hostname = "0.4"

[build-dependencies]
pyo3-build-config = "0.27.1"
