[package]
name = "mssql-rs"
version = "0.1.0"
edition = "2024"
description = "Ergonomic Rust client for SQL Server, built on the mssql-tds protocol library"
license = "MIT"

[dependencies]
mssql-tds = { path = "../mssql-tds" }
futures = "0.3.31"
bytes = "1.11.0"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
tracing = { version = "0.1.43", features = ["log"] }
bigdecimal = "0.4"
uuid = { version = "1.19.0", features = ["v4"] }
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full", "test-util"] }
mssql-mock-tds = { path = "../mssql-mock-tds" }
