[package]
name = "mssql-tds-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
rustyline = "17.0.0"
tracing-subscriber = "0.3.19"
mssql-tds = { path = "../mssql-tds" }
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.88"
futures = "0.3.31"

