[package]
name = "mssql-tds-cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rustyline = "17.0.2"
tracing-subscriber = "0.3.22"
mssql-tds = { path = "../mssql-tds" }
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.31"

