[package]
name = "mssql-tds"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
futures = "0.3.31"
byteorder = "1.5.0"
tokio-util = { version = "0.7.15", features = ["full"] }
bytes = "1.10.1"
tracing = { version = "0.1.41", features = ["log"] }
bitflags = "2.9.1"
thiserror = "2.0.12"
# For pretty printing of the packets in the traces.
pretty-hex = "0.4"
# Added for setting the keep alives on the socket.
socket2 = { version = "0.5", features = ["all"] }
hostname = "0.4.1"

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
rand = "0.9.1"
dotenv = "0.15"
azure_identity = "0.25.0"
azure_core = "0.25.0"
tracing-subscriber = "0.3.19"
ctor = "0.4"
mockall = "0.13.1"
