[package]
name = "mssql-tds"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
futures = "0.3.31"
byteorder = "1.5.0"
tokio-util = { version = "0.7.17", features = ["full"] }
bytes = "1.11.0"
tracing = { version = "0.1.43", features = ["log"] }
bitflags = "2.10.0"
thiserror = "2.0.17"
bigdecimal = "0.4"
# For pretty printing of the packets in the traces.
pretty-hex = "0.4"
# Added for setting the keep alives on the socket.
socket2 = { version = "0.5", features = ["all"] }
hostname = "0.4.2"
# For LCID-based encoding conversion (TEXT/NTEXT reading)
encoding_rs = "0.8"
# For certificate expiry validation (ServerCertificate feature)
# Note: native-tls handles PEM/DER parsing, x509-parser only for expiry check
x509-parser = "0.16"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["namedpipeapi", "winerror"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Registry"] }

[dependencies.uuid]
version = "1.19.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bench]]
name = "perf"
harness = false

[dev-dependencies]
rand = "0.9.2"
dotenv = "0.15"
azure_identity = "0.25.0"
azure_core = "0.25.0"
tracing-subscriber = "0.3.22"
ctor = "0.4"
mockall = "0.13.1"
criterion = "0.5"
mssql-mock-tds = { path = "../mssql-mock-tds" }
tempfile = "3.13"
