[package]
name = "mssql-tds"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of the TDS (Tabular Data Stream) protocol for SQL Server"
license = "MIT"
readme = "README.md"
keywords = ["sql-server", "tds", "mssql", "database", "async"]
categories = ["database", "network-programming"]

[features]
default = ["integrated-auth"]
# Windows SSPI (Security Support Provider Interface) for integrated authentication
sspi = []
# Unix GSSAPI (Kerberos) for integrated authentication
gssapi = []
# Enable both SSPI and GSSAPI for cross-platform integrated authentication
integrated-auth = ["sspi", "gssapi"]


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)', 'cfg(feature, values("sspi", "gssapi", "integrated-auth"))'] }

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
tokio-native-tls = "0.3.1"
native-tls = { version = "0.2.18", features = ["alpn"] }
futures = "0.3.31"
byteorder = "1.5.0"
tokio-util = { version = "0.7.17", features = ["full"] }
bytes = "1.11.0"
tracing = { version = "0.1.43", features = ["log"] }
bitflags = "2.10.0"
thiserror = "2.0.17"
bigdecimal = "0.4"
# For pretty printing of the packets in the traces.
pretty-hex = "0.4"
# Added for setting the keep alives on the socket.
socket2 = { version = "0.5", features = ["all"] }
hostname = "0.4.2"
# For LCID-based encoding conversion (TEXT/NTEXT reading)
encoding_rs = "0.8"
# For certificate expiry validation (ServerCertificate feature)
# Note: native-tls handles PEM/DER parsing, x509-parser only for expiry check
x509-parser = "0.18.0"
# For DNS resolution (reverse DNS lookup for SPN canonicalization)
dns-lookup = "2.0"



[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["namedpipeapi", "winerror", "winbase"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Registry"] }

[target.'cfg(unix)'.dependencies]
# For runtime GSSAPI library detection using dlopen/dlsym
libc = "0.2"

[dependencies.uuid]
version = "1.19.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bench]]
name = "perf"
harness = false

[dev-dependencies]
rand = "0.9.2"
dotenv = "0.15"
azure_identity = "0.25.0"
azure_core = "0.25.0"
ctor = "0.4"
mockall = "0.13.1"
criterion = "0.5"
mssql-mock-tds = { path = "../mssql-mock-tds" }
tempfile = "3.13"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
