[package]
name = "tds-x"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.42", features = ["full"] }

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
