[package]
name = "tds-x"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.42", features = ["full"] }
tokio-native-tls = "0.3.1"
futures = "0.3.30"
byteorder = "1.5.0"
tokio-util = { version = "0.7.13", features = ["full"] }
bytes = "1.4"
tracing-subscriber = "0.3.0"
tracing = { version = "0.1", features = ["log"] }
bitflags = "2.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
rand = "0.8"
