[package]
name = "tds-x"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.86"
tokio = { version = "1.43.0", features = ["full"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
futures = "0.3.31"
byteorder = "1.5.0"
tokio-util = { version = "0.7.13", features = ["full"] }
bytes = "1.9.0"
tracing = { version = "0.1.41", features = ["log"] }
bitflags = "2.7.0"
thiserror = "2.0.12"
pretty-hex = "0.3"

[features]
all = ["cli"]
default = []
cli = ["rustyline", "clap", "tracing-subscriber"]

[dependencies.tracing-subscriber]
version = "0.3.19"
optional = true

[dependencies.rustyline]
version = "15.0.0"
optional = true

[dependencies.clap]
version = "4.5.28"
features = ["derive"]
optional = true

[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
rand = "0.8.5"
dotenv = "0.15"
azure_identity = "0.22.0"
azure_core = "0.22.0"
tracing-subscriber = "0.3.19"
