[package]
edition = "2021"
name = "tdsx-nodejs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async", "tokio_rt"] }
napi-derive = "2.12.2"
tds-x = { path = "../tds-x" }
tokio = { version = "1.43.0", features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"
