[package]
edition = "2021"
name = "tdsx-nodejs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.7", default-features = false, features = ["napi4", "async", "tokio_rt", "chrono_date"] }
napi-derive = "2.16.13"
tds-x = { path = "../tds-x" }
tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4.41"

[build-dependencies]
napi-build = "2.2.2"
