[package]
name = "tdsx-python"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "pytdslib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
tokio = { version = "1.43.0", features = ["full"] }
tds-x = { path = "../tds-x" }
once_cell = "1.10.0"
futures = "0.3.31"
tracing = { version = "0.1.41", features = ["log"] }
log = "0.4"
env_logger = "0.10"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
