[package]
name = "tdsapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tdslibrary = { path = "../tdslibrary" }
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = "0.3.0"
tracing = { version = "0.1", features = ["log"] }
