[package]
name = "transport-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
byteorder = "1.5.0"
bytes = "1.6.0"
enumflags2 = "0.7.10"
futures = "0.3.30"
native-tls = "0.2.12"
thiserror = "1.0.61"
time = "0.3.36"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.8.0"
